# gateway-to-ai

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
claudegate/: __init__.py  app.py  backend_state.py  cli_backend.py  config.py  context_guard.py  copilot_auth.py  copilot_client.py  copilot_translate.py  copilot_usage.py  cx_ai_cluster_client.py  dashboard.py  errors.py  litellm_client.py  log_buffer.py  models.py  openai_translate.py  request_stats.py  responses_translate.py  server_url.py  service.py
clauderock/: __init__.py  app.py  client.py  config.py  copilot_auth.py  copilot_translate.py  models.py
contrib/launchd/: com.claudegate.plist  com.clauderock.plist
contrib/systemd/: claudegate.service  clauderock.service
docs/: getting-started-codex.md  getting-started.md
plugins/claudegate/.claude-plugin/: plugin.json
plugins/claudegate/skills/backend/: SKILL.md
plugins/claudegate/skills/models/: SKILL.md
plugins/claudegate/skills/usage/: SKILL.md
plugins/models/.claude-plugin/: plugin.json
plugins/models/skills/models/: SKILL.md
tests/: conftest.py  test_app.py  test_backend_state.py  test_bedrock_client.py  test_client.py  test_config.py  test_context_guard.py  test_copilot_auth.py  test_copilot_client.py  test_copilot_translate.py  test_copilot_usage.py  test_dashboard.py  test_errors.py  test_fallback.py  test_litellm_client.py  test_models.py  test_openai_compat.py  test_openai_translate.py  test_request_stats.py  test_responses_translate.py  test_server_url.py  test_service.py
