[project]
name = "claudegate"
version = "0.1.0"
description = "Anthropic API proxy for AWS Bedrock and GitHub Copilot backends"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Daniel Schmidt" }
]
keywords = ["anthropic", "bedrock", "claude", "proxy", "aws", "copilot", "github", "claudegate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3>=1.42.33",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
claudegate = "claudegate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--tb=short", "-q"]

[tool.coverage.run]
source = ["claudegate"]
omit = ["claudegate/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__."]

[tool.hatch.build.targets.wheel]
packages = ["claudegate"]
